2004-05-18  Martin Schaffner  <maschaffner@gmx.ch>

	* include/d.bat, include/lst.bat, include/m.bat, include/test.c,
	include/test.lnk: remove unnecessary files

	* configure.ac: add -no-cpp-precomp when compiling on Mac OS X.
	This enables compilation with gcc 3.1

2004-05-17  Dietfrid Mali  <dietfrid.mali@q-dial.de>

	* main/switch.c: took care of switches triggering single-sided
	walls (don't try to access the nonexistent adjacent wall via NULL
	pointers or negative array indices)

2004-05-16  Dietfrid Mali  <dietfrid.mali@q-dial.de>

        * main/wall.c: fix invalid memory access for d1 levels which
	don't have a corresponding wall behind.

2004-05-16  Martin Schaffner  <maschaffner@gmx.ch>

	* include/ogl_init.h, arch/ogl/glx.c, arch/ogl/gr.c,
	arch/ogl/internal.h, arch/ogl/ogl.c, arch/ogl/sdlgl.c,
	arch/ogl/wgl.c: move most ogl-internal stuff from the ogl
	interface header to new header file internal.h

2004-05-15  Dietfrid Mali  <dietfrid.mali@q-dial.de>

        * arch/sdl/joy.c: joystick_read_raw_axis() will return a proper
	bitmask for each joystick axis that has sent input data,
	and will not crash Windows anymore during joystick setup because
	of for() loop over axis being executed once too often.

	* main/gameseq.c, include/gr.h, 2d/font.c: define new function
	gr_remap_mono_font() and call it after loading saved level.

	* main/laser.c: limit homing missile turn rate

	* main/fuelcen.c, main/fuelcen.h, main/object.c: implement repair
	centers (work like fuel centers but provide shield)

	* main/gameseg.c: fix endless loop in some levels with a
	certain (complicated) structure

2004-05-13  Bradley Bell  <btb@icculus.org>

	* VisualC/d2/d2x/d2x.dsp, VisualC/d2xgl/d2xgl.dsp,
	VisualC/libmve/libmve.dsp, VisualC/mveplayer/mveplayer.dsp:
	updated project files for SDL 1.2.7

	* Makefile.am: add VisualC, VisualCE dirs to tarball

2004-05-13  Martin Schaffner  <maschaffner@gmx.ch>

        * arch/sdl/digi.c: formatting
